# SmallRobotArm_ROS

./: .gitignore  README.md
robot_demo/: package.xml
robot_demo/scripts/: moveit_attached_object_demo.py  moveit_cartesian_demo.py  moveit_fk_demo.py  moveit_ik_demo.py  moveit_loop.py  paramer_assistant.py
robot_demo/src/: euler_orientation  euler_orientation.cpp
smallrobot_description/: CMakeLists.txt  package.xml
smallrobot_description/launch/: smallrobot_description.launch  smallrobot_display.launch
smallrobot_description/urdf/: save.txt  smallrobot.urdf
smallrobot_driver/: CMakeLists.txt  package.xml
smallrobot_driver/config/: controllers.yaml
smallrobot_driver/include/smallrobot_driver/: Smallrobot.h  SmallrobotRos.h  common.h
smallrobot_driver/launch/: load_config.launch  smallrobot_bringup.launch  smallrobot_hardware.launch
smallrobot_driver/msg/: ExtraFeatures.msg
smallrobot_driver/scripts/: extra_feature_demo.py
smallrobot_driver/src/: Smallrobot.cpp  SmallrobotRos.cpp  smallTest.cpp  smallrobot_main.cpp
smallrobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
smallrobot_moveit_config/config/: smallrobot.srdf
smallrobot_moveit_config/launch/: add_camera_demo.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  (+6 more)
smallrobot_planning/: CMakeLists.txt  package.xml
(+8 files in other folders)
